# tree-sitter-as

./: .gitignore  Cargo.toml  LICENSE  README.md  generate.sh  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/rust/: build.rs  lib.rs
examples/: example.as
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: declarations.txt  literals.txt  statements.txt
